[project]
name = "webu"
version = "1.4.0"
authors = [
    { name="Hansimov" },
]
description = "Web Utils for browsing and scraping"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "tclogger", "alibabacloud_esa20240910"]

[project.optional-dependencies]
parsing = ["beautifulsoup4"]
browser = ["DrissionPage", "pyvirtualdisplay"]
searches = ["DrissionPage", "pyvirtualdisplay"]
embed = ["numpy"]
captcha = ["playwright", "numpy", "opencv-python-headless", "httpx"]
fastapi = ["fastapi", "uvicorn", "pydantic"]
dashboard = ["dash", "a2wsgi"]
proxy = ["aiohttp", "aiohttp-socks", "pymongo"]
cf-tunnel = ["beautifulsoup4"]
gemini = ["beautifulsoup4", "playwright", "fastapi", "uvicorn", "pydantic"]
google-api = [
    "beautifulsoup4",
    "cryptography",
    "playwright",
    "pyvirtualdisplay",
    "aiohttp",
    "aiohttp-socks",
    "fastapi",
    "uvicorn",
    "pydantic",
]
google-api-panel = ["dash", "a2wsgi"]
google-docker = [
    "beautifulsoup4",
    "cryptography",
    "playwright",
    "pyvirtualdisplay",
    "aiohttp",
    "aiohttp-socks",
    "fastapi",
    "uvicorn",
    "pydantic",
    "huggingface_hub",
]
google-docker-panel = ["dash", "a2wsgi"]
google-hub = [
    "aiohttp",
    "fastapi",
    "uvicorn",
    "pydantic",
    "huggingface_hub",
]
google-hub-panel = ["dash", "a2wsgi"]
proxy-api = [
    "aiohttp",
    "aiohttp-socks",
    "pymongo",
    "fastapi",
    "uvicorn",
    "pydantic",
]
warp-api = ["psutil", "fastapi", "uvicorn", "pydantic"]
ipv6 = ["netifaces", "fastapi", "uvicorn", "pydantic"]
ali-esa = ["alibabacloud_esa20240910"]
all = [
    "DrissionPage",
    "pyvirtualdisplay",
    "beautifulsoup4",
    "numpy",
    "playwright",
    "httpx",
    "fastapi",
    "uvicorn",
    "pydantic",
    "psutil",
    "pymongo",
    "aiohttp",
    "aiohttp-socks",
    "huggingface_hub",
    "opencv-python-headless",
    "cryptography",
    "dash",
    "a2wsgi",
    "netifaces",
]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/Hansimov/webu"
Issues = "https://github.com/Hansimov/webu/issues"

[project.scripts]
ggsc = "webu.google_api.cli:main"
pxsc = "webu.proxy_api.cli:main"
cfwp = "webu.warp_api.cli:main"
ggdk = "webu.google_docker.cli:main"
gghb = "webu.google_hub.cli:main"
cftn = "webu.cf_tunnel.cli:main"
aesa = "webu.ali_esa.cli:main"
wdns = "webu.ddns.cli:main"
wssh = "webu.ssh.cli:main"
wfrp = "webu.frp.cli:main"
wngx = "webu.nginx.cli:main"
